--- a/src-ui/res/rules.en.yaml
+++ b/src-ui/res/rules.en.yaml
@@ -4,8 +4,9 @@ bdwalk: "You're given a top-down view of a building. Grey cells\
   \ path goes up one or more floors at an Up arrow, and goes down one or more floors\
   \ at a Down arrow.\n4. The path must change floors at an elevator without an arrow,\
   \ but this can be in either direction.\n5. A number indicates the floor that the\
-  \ path should be on when passing through it.\n6. At no point does the path go below\
-  \ the 1st floor.\nThis genre first appeared in Puzzle Communication Nikoli vol.\
+  \ path should be on when passing through it.\n6. The height of the building is equal to \
+  \ the largest number on the grid. At no point does the path go below the 1st floor, or \
+  \ above the top floor.\nThis genre first appeared in Puzzle Communication Nikoli vol. \
   \ 174."
 
 
